# get_subscribe

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: get_projaec_info.yml  main.yml  publish.yml
src/get_subscribe/: __init__.py  client_launcher.py  client_manager.py  fetcher.py  main.py
src/get_subscribe.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
