[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "get-subscribe"
version = "1.0.0"
description = "免费机场/VPN 订阅自动获取工具 - Clash / V2Ray / Trojan / SSR 订阅链接自动抓取"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "adminlove520", email = "adminlove520@github.com"}
]
keywords = ["vpn", "clash", "v2ray", "subscribe", "proxy", "机场", "梯子", "翻墙"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.0",
    "feedparser>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "build>=1.0.0",
    "twine>=4.0.0",
    "pytest>=7.0.0",
]

[project.scripts]
get-subscribe = "get_subscribe.main:main"

[project.urls]
Homepage = "https://github.com/adminlove520/get_subscribe"
Repository = "https://github.com/adminlove520/get_subscribe"
Issues = "https://github.com/adminlove520/get_subscribe/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
